# imgsim

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs
config/: config.toml  default.toml
src/: cli.rs  data.rs  lib.rs  main.rs  persistence.rs  similarity.rs  utils.rs
src/cli/: arg_matcher.rs  arg_parser.rs
src/clustering/: algs.rs
src/data/: helpers.rs  imgsim_image.rs  kd_tree.rs
src/persistence/: errors.rs  load_images.rs  options.rs
src/pixeldist/: algs.rs
src/pixelsim/: algs.rs
src/similarity/: algs.rs  errors.rs
