[package]
name = "imgsim"
version = "1.0.0"
edition = "2021"
authors = ["Max Gilmour"]
description = "A tool that finds similar images through various methods."
readme = "README.md"
repository = "https://github.com/maxgmr/imgsim"
license-file = "LICENSE"

[dependencies]
clap = { version = "4.5", features = ["cargo", "derive", "string"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
