[package]
name = "imgsim"
version = "1.0.0"
edition = "2021"
authors = ["Max Gilmour"]
description = "A tool that finds similar images through various methods."
readme = "README.md"
repository = "https://github.com/maxgmr/imgsim"
license-file = "LICENSE"
build = "build.rs"

[dependencies]
camino = "1.1"
clap = { version = "4.5", features = ["cargo", "derive", "string"] }
color-eyre = "0.6"
directories = "5.0"

[build-dependencies]
vergen-gix = { version = "1.0", features = ["build", "cargo"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
